--- a/dataset/europar/lowd/Stanford/Makefile
+++ b/dataset/europar/lowd/Stanford/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = Stanford
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Kamvar/Stanford.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Kamvar/Stanford.tar.gz
 
 include ../common.mk
 include ../ufl.mk
