--- a/dataset/europar/lowd/citationCiteseer/Makefile
+++ b/dataset/europar/lowd/citationCiteseer/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = citationCiteseer
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/DIMACS10/citationCiteseer.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/DIMACS10/citationCiteseer.tar.gz
 
 include ../common.mk
 include ../ufl.mk
