--- a/dataset/europar/highd/StocF-1465/Makefile
+++ b/dataset/europar/highd/StocF-1465/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = StocF-1465
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Janna/StocF-1465.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Janna/StocF-1465.tar.gz
 
 include ../common.mk
 include ../ufl.mk
