--- a/dataset/europar/highd/bmw3_2/Makefile
+++ b/dataset/europar/highd/bmw3_2/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = bmw3_2
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/GHS_indef/bmw3_2.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/GHS_indef/bmw3_2.tar.gz
 
 include ../common.mk
 include ../ufl.mk
