--- a/dataset/europar/highd/bone010/Makefile
+++ b/dataset/europar/highd/bone010/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = bone010
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Oberwolfach/bone010.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Oberwolfach/bone010.tar.gz
 
 include ../common.mk
 include ../ufl.mk
