--- a/dataset/europar/highd/boneS10/Makefile
+++ b/dataset/europar/highd/boneS10/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = boneS10
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Oberwolfach/boneS10.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Oberwolfach/boneS10.tar.gz
 
 include ../common.mk
 include ../ufl.mk
