--- a/dataset/europar/highd/inline_1/Makefile
+++ b/dataset/europar/highd/inline_1/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = inline_1
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/GHS_psdef/inline_1.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/GHS_psdef/inline_1.tar.gz
 
 include ../common.mk
 include ../ufl.mk
