--- a/dataset/europar/highd/ldoor/Makefile
+++ b/dataset/europar/highd/ldoor/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = ldoor
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/GHS_psdef/ldoor.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/GHS_psdef/ldoor.tar.gz
 
 include ../common.mk
 include ../ufl.mk
