--- a/dataset/europar/lowd/FullChip/Makefile
+++ b/dataset/europar/lowd/FullChip/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = FullChip
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Freescale/FullChip.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Freescale/FullChip.tar.gz
 
 include ../common.mk
 include ../ufl.mk
