--- a/dataset/europar/lowd/circuit5M/Makefile
+++ b/dataset/europar/lowd/circuit5M/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = circuit5M
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Freescale/circuit5M.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Freescale/circuit5M.tar.gz
 
 include ../common.mk
 include ../ufl.mk
