--- a/dataset/europar/lowd/ins2/Makefile
+++ b/dataset/europar/lowd/ins2/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = ins2
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Andrianov/ins2.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Andrianov/ins2.tar.gz
 
 include ../common.mk
 include ../ufl.mk
