--- a/dataset/europar/lowd/neos3/Makefile
+++ b/dataset/europar/lowd/neos3/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = neos3
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/Mittelmann/neos3.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/Mittelmann/neos3.tar.gz
 
 include ../common.mk
 include ../ufl.mk
