--- a/dataset/europar/lowd/web-Stanford/Makefile
+++ b/dataset/europar/lowd/web-Stanford/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = web-Stanford
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/SNAP/web-Stanford.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/SNAP/web-Stanford.tar.gz
 
 include ../common.mk
 include ../ufl.mk
