--- a/dataset/europar/lowd/wheel_601/Makefile
+++ b/dataset/europar/lowd/wheel_601/Makefile
@@ -1,5 +1,5 @@
 GRAPH_NAME = wheel_601
-GRAPH_URL  = https://www.cise.ufl.edu/research/sparse/MM/JGD_Margulies/wheel_601.tar.gz
+GRAPH_URL  = https://sparse.tamu.edu/MM/JGD_Margulies/wheel_601.tar.gz
 
 include ../common.mk
 include ../ufl.mk
